feat(auth): Sistema de auth com register e login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=banking-backend
+
+server.port=${PORT:8080}
+
+# JPA/Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Evitar problemas com Springdoc/Swagger no Spring Boot 3
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=None
