fix(var): Ajuste de variaveis de ambiente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-jwt.secret={JWT_SECRET}
-spring.datasource.url={SPRING_DATASOURCE_URL}
-spring.datasource.usernam={SPRING_DATASOURCE_USERNAME}
-spring.datasource.password={SPRING_DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name={SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+jwt.secret=${JWT_SECRET}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.usernam=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
 
 # Evitar problemas com Springdoc/Swagger no Spring Boot 3
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
