--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Production
 jwt.secret=${JWT_SECRET}
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.usernam=${SPRING_DATASOURCE_USERNAME}
